# exbee

./: .gitignore  README.md  brisi.out  sandbox.py
exbee/: pyproject.toml
exbee/src/exbee/: __init__.py  exb_parser.py  trs_parser.py
exbee/tests/: ROG-Dia-GSO-P0005-std.trs  ROG-Dia-GSO-P0005.exb  test_exb_on_demo_file.py  test_on_demo_file.py  test_trs_on_demo_file.py
